// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  color: inherit;
  font-size: inherit;
  font-weight: inherit;
  font-style: italic;
}

<em
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</em>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  color: red;
  font-size: 18;
  font-weight: inherit;
  font-style: oblique;
}

<em
  class="c0"
>
  some text1
  <span>
    some text2
  </span>
</em>
`;
